# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: ci.yaml
gendiff/: __init__.py  diff.py  files_parser.py  find_diff.py  visual.py
gendiff/formatters/: formater_json.py  formater_plain.py  formater_stylish.py  value_format.py
gendiff/scripts/: find_diff.py  gendiff.py
tests/: test_diff.py  test_format_value.py  test_inner_diff.py
tests/coverage/: coverage.xml
tests/fixtures/: expected_json.txt
