[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "makefile>=1.1.0",
    "pyproject-toml>=0.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "ruff<=0.9.7",
    "tools>=1.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
